
syntax = "proto3";

package tictactoe;

option go_package = "github.com/Akshay2642005/gRPC";

service TicTacToeService {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
    rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
    rpc PlaceMove(PlaceMoveRequest) returns (GameState);
    rpc StreamGameState(RoomRequest) returns (stream GameState);
}

message CreateRoomRequest {
    string player_name = 1;
}

message CreateRoomResponse {
    string room_id = 1;
}

message JoinRoomRequest {
    string room_id = 1;
    string player_name = 2;
}

message JoinRoomResponse {
    string status = 1;
}

message PlaceMoveRequest {
    string room_id = 1;
    string player_name = 2;
    int32 row = 3;
    int32 col = 4;
}

message RoomRequest {
    string room_id = 1;
}

message GameState {
    string room_id = 1;
    repeated Field board = 2;
    string turn = 3;
    bool is_game_over = 4;
    string winner = 5;
}

message Field {
    int32 row = 1;
    int32 col = 2;
    string value = 3; // "X" or "O"
}

